--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
 @import url(abstract/_base.scss);
-@import url(abstract/_navbar.scss);
+@import url(components/_navbar.scss);
 
 /*# sourceMappingURL=style.css.map */
