--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,4 @@
-@import url(abstract/_base.scss);
-@import url(components/_navbar.scss);
-@import url(components/_banner.scss);
+@import "abstract/_base";
+@import "components/_navbar";
+@import "components/_banner";
+@import "components/_servicos";
