--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,3 +3,5 @@
 @import "components/_banner";
 @import "components/_servicos";
 @import "components/_cupom";
+@import "components/_footer.sass";
+@import "components/curiosidades";
