--- a/styles/components/_cupom.scss
+++ b/styles/components/_cupom.scss
@@ -24,16 +24,44 @@
     input {
       border-radius: 20px;
       height: 40px;
-      border: none; /* border: none; => Remove a borda*/
+      border: none;
+      /* border: none; => Remove a borda*/
       width: 540px;
-      outline: none; /* outline: none; => Remove a borda quando estiver selecionado */
+      outline: none;
+      /* outline: none; => Remove a borda quando estiver selecionado */
       text-align: center;
       font-size: 26px;
     }
 
     &:hover, &:focus-within {
       box-shadow: 1px 1px 8px 1px $cor-primaria;
-      outline: none; /* outline: none; => Remove a borda quando estiver selecionado */
+      outline: none;
+      /* outline: none; => Remove a borda quando estiver selecionado */
+    }
+  }
+
+  button {
+    text-transform: uppercase;
+    margin-top: .75rem;
+    outline: none;
+    /* outline: none; => Remove a borda quando estiver selecionado */
+    height: 40px;
+    text-align: center;
+    width: 130px;
+    background-color: $cor-primaria;
+    color: $cor-secundaria;
+    letter-spacing: 1px;
+    /* letter-spacing: 1px; => Espacamento entre as letras */
+    font-size: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 2px $cor-primaria;
+    border-radius: 40px;
+
+    &:hover {
+      background-color: $cor-secundaria;
+      color: $cor-primaria;
+      border-color: $cor-terciaria;
     }
   }
 }
